--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
         </style>
     </head>
     <body>
+      <script src="js/phaser.js"></script>
+      <script src="js/bootscene.js"></script>
+      <script src="js/loadingscene.js"></script>
+      <script src="js/homescene.js"></script>
+      <script src="js/ball.js"></script>
+      <script src="js/main.js"></script>
     </body>
 </html>
