Added HealthBar class and gradually decreasing health bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <script src="js/bootscene.js"></script>
       <script src="js/loadingscene.js"></script>
       <script src="js/homescene.js"></script>
+      <script src="js/healthbar.js"></script>
       <script src="js/main.js"></script>
     </body>
 </html>
