--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <script src="js/bootscene.js"></script>
       <script src="js/loadingscene.js"></script>
       <script src="js/homescene.js"></script>
-      <script src="js/healthbar.js"></script>
       <script src="js/main.js"></script>
+      <script src="js/healthbar.js"></script>
+      <script src="js/minigamebar.js"></script>
     </body>
 </html>
