--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       <script src="js/healthbar.js"></script>
       <script src="js/minigamebar.js"></script>
       <script src="js/food_player.js"></script>
+      <script src="js/main.js"></script>
     </body>
 </html>
