--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <script src="js/homescene.js"></script>
       <script src="js/healthbar.js"></script>
       <script src="js/minigamebar.js"></script>
-      <script src="js/main.js"></script>      
+      <script src="js/gameover.js"></script>
+      <script src="js/main.js"></script>
       <script src="js/food_player.js"></script>
       <script src="js/randomevent.js"></script>
-      <script src="js/main.js"></script>
     </body>
 </html>
